[gd_scene load_steps=4 format=3 uid="uid://cjv3ykbxr5gmn"]

[ext_resource type="Script" uid="uid://bx8luj603scuu" path="res://Scenes/UI/start_menu.gd" id="1_xry01"]
[ext_resource type="Texture2D" uid="uid://ppqy17o0duf6" path="res://Scenes/UI/Assets/main_menu_background.png" id="2_8wf1d"]
[ext_resource type="PackedScene" uid="uid://co4vy8ojvpmq7" path="res://Scenes/UI/custom_button.tscn" id="3_8wf1d"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xry01")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8wf1d")
metadata/_edit_lock_ = true

[node name="StartButton" parent="." instance=ExtResource("3_8wf1d")]
offset_left = 560.0
offset_top = 352.0
offset_right = 612.0
offset_bottom = 370.0
scale = Vector2(4, 4)

[node name="FocusTexture" parent="StartButton" index="0"]
offset_right = 55.0

[node name="Button" parent="StartButton" index="1"]
offset_right = 52.0

[node name="Frame" parent="StartButton/Button" index="0"]
offset_right = 52.0

[node name="Text" parent="StartButton/Button" index="1"]
text = "START"

[node name="SettingsButton" parent="." instance=ExtResource("3_8wf1d")]
offset_left = 516.0
offset_top = 444.0
offset_right = 591.0
offset_bottom = 462.0
scale = Vector2(4, 4)

[node name="FocusTexture" parent="SettingsButton" index="0"]
offset_right = 78.0

[node name="Button" parent="SettingsButton" index="1"]
offset_right = 52.0

[node name="Frame" parent="SettingsButton/Button" index="0"]
offset_right = 75.0

[node name="Text" parent="SettingsButton/Button" index="1"]
text = "SETTINGS"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]

[editable path="StartButton"]
[editable path="SettingsButton"]
